--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApiConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=SerialsApi.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
