changed database name

--- a/Api/Api/appsettings.json
+++ b/Api/Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApiConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=SerialsApi.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApiConnection": "Server=(localdb)\\mssqllocaldb;Initial Catalog=SeriesApi.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
