--- a/Api/Api/Api.csproj
+++ b/Api/Api/Api.csproj
@@ -29,8 +29,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="DTOs\" />
+    <Folder Include="DTOs\ActorsDTOs\" />
+    <Folder Include="DTOs\EpisodesDTOs\" />
+    <Folder Include="DTOs\GenresDTOs\" />
+    <Folder Include="DTOs\SeriesDTOs\" />
+    <Folder Include="DTOs\SeasonsDTOs\" />
     <Folder Include="MapperProfiles\" />
   </ItemGroup>
 
