--- a/Api/Api/Api.csproj
+++ b/Api/Api/Api.csproj
@@ -27,6 +27,7 @@
 	  <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
 	  <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.1" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
